--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,23 +1,3 @@
-.example {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  line-height: 1.5;
-  background-color: #fff;
-  color: #2f2f37;
-  max-width: 960px;
-  padding: 16px;
-}
-
-.example code {
-  font-family: monospace;
-  font-size: 16px;
-  font-weight: 700;
-  background-color: #ff6b0a;
-  color: #fff;
-  padding: 2px 6px;
-  border-radius: 2px;
-}
-
 body {
   background-color: rgb(227, 186, 239);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
@@ -25,12 +5,27 @@ body {
   line-height: 1.5;
   color: #2f2f37;
 }
+
 select {
   margin-top: 30px;
   margin-left: 30px;
+  margin-bottom: 30px;
   font-family: monospace;
   font-size: 16px;
   font-weight: 700;
   padding: 2px 6px;
   border-radius: 2px;
+}
+
+.is-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
